--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/app.js",
-    "dev" :"nodemon ./src/app.js"
-
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.10.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.4.0",
     "nodemon": "^3.1.9"
   }
 }
