--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/app.js",
@@ -15,10 +14,12 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
